prow/base/pipeline.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prow-pipeline
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prow-pipeline
  template:
    metadata:
      labels:
        app: prow-pipeline
    spec:
      serviceAccountName: prow-pipeline
      containers:
        - name: pipeline
          image: pipeline:latest
          args:
            - --all-contexts
            - --config=/etc/prow-config/config.yaml
          volumeMounts:
            - mountPath: /etc/kubeconfig
              name: kubeconfig
              readOnly: true
            - mountPath: /etc/prow-config
              name: prow-config
              readOnly: true
      volumes:
        - name: kubeconfig
          secret:
            defaultMode: 420
            secretName: kubeconfig
        - name: prow-config
          configMap:
            name: config
