prow/base/horologium.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horologium
  labels:
    app: horologium
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: horologium
  template:
    metadata:
      labels:
        app: horologium
    spec:
      serviceAccountName: "horologium"
      terminationGracePeriodSeconds: 30
      containers:
        - name: horologium
          image: gcr.io/k8s-prow/horologium@sha256:6508a6b0e58624e9c300c0c500f34ca10f724b0d487546d16aa64b9b5c5d325d
          args:
            - --dry-run=false
            - --config-path=/etc/config/config.yaml
          ports:
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "2m"
            limits:
              memory: "64Mi"
              cpu: "2m"
      volumes:
        - name: config
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: horologium
  name: horologium
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
  selector:
    app: horologium
