prow/base/needs-rebase.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: needs-rebase
  labels:
    app: needs-rebase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: needs-rebase
  template:
    metadata:
      labels:
        app: needs-rebase
    spec:
      terminationGracePeriodSeconds: 180
      containers:
        - name: needs-rebase
          image: gcr.io/k8s-prow/needs-rebase@sha256:0b75302ed2bdded64fcb8043d14316ff135389bd5b835ad1932a9b7eb28b5f14
          args:
            - --dry-run=false
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
          ports:
            - name: http
              containerPort: 8888
          resources:
            requests:
              memory: "64Mi"
              cpu: "1m"
            limits:
              memory: "64Mi"
              cpu: "1m"
          volumeMounts:
            - name: hmac
              mountPath: /etc/webhook
              readOnly: true
            - name: oauth
              mountPath: /etc/github
              readOnly: true
            - name: plugins
              mountPath: /etc/plugins
              readOnly: true
      volumes:
        - name: hmac
          secret:
            secretName: hmac-token
        - name: oauth
          secret:
            secretName: oauth-token
        - name: plugins
          configMap:
            name: plugins
---
apiVersion: v1
kind: Service
metadata:
  name: needs-rebase
spec:
  selector:
    app: needs-rebase
  ports:
    - port: 80
      targetPort: 8888
  type: NodePort
