prow/base/prow-controller-manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prow-controller-manager
  labels:
    app: prow-controller-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prow-controller-manager
  template:
    metadata:
      labels:
        app: prow-controller-manager
    spec:
      serviceAccountName: prow-controller-manager
      containers:
        - name: prow-controller-manager
          args:
            - --dry-run=false
            - --config-path=/etc/config/config.yaml
            - --github-token-path=/etc/github/token
            - --github-endpoint=http://ghproxy
            - --github-endpoint=https://api.github.com
            - --enable-controller=plank
          image: gcr.io/k8s-prow/prow-controller-manager@sha256:136bd27045a26708613c2932f6d6ca0743364cde143f87b399f8884f20a8c833
          ports:
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "8m"
            limits:
              memory: "128Mi"
              cpu: "8m"
      volumes:
        - name: config
          configMap:
            name: config
        - name: github-token
          secret:
            secretName: github-token
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prow-controller-manager
  name: prow-controller-manager
spec:
  ports:
    - name: metrics
      port: 9090
      protocol: TCP
  selector:
    app: prow-controller-manager
