prow/base/sinker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sinker
  labels:
    app: sinker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sinker
  template:
    metadata:
      labels:
        app: sinker
    spec:
      serviceAccountName: sinker
      containers:
        - name: sinker
          args:
            - --config-path=/etc/config/config.yaml
            - --dry-run=false
          image: gcr.io/k8s-prow/sinker@sha256:86758572220cd686bfa1714b306dfca28814f33b9406228ffce60a4e2a7fac02
          ports:
            - name: metrics
              containerPort: 9090
          volumeMounts:
            - name: config
              mountPath: /etc/config
              readOnly: true
          resources:
            requests:
              memory: "128Mi"
              cpu: "4m"
            limits:
              memory: "128Mi"
              cpu: "4m"
      volumes:
        - name: config
          configMap:
            name: config
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sinker
  name: sinker
spec:
  ports:
    - name: metrics
      port: 9090
  selector:
    app: sinker
